[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix="0.13.5"
actix-web="4.8.0"
actix-cors="0.7.0"
actix-web-actors="4.3.0"
actix-web-lab="0.20.2"
log = "0.4.21"
uuid = { version = "1.9.0", features = ["v4", "serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
lazy_static = "1.5.0"
rand = "0.8.5"
